# register-bits

./: Cargo.toml  README.j2  README.md  generate_combinations.py  generate_impl_rs.py  release.toml
src/: impls_32.rs  lib.rs  prelude.rs  reg128.rs  reg16.rs  reg32.rs  reg64.rs  reg8.rs  reg_reference.rs
tests/: concat.rs  up-downcasting.rs
