[package]
name = "register-bits"
description = "Perform register-bit manipulation which is verified at compile time"
version = "0.1.0"
edition = "2021"

[features]
default = ["32bit"]
all = ["8bit", "16bit", "32bit", "64bit", "128bit"]
8bit = []
16bit = []
32bit = []
64bit = []
128bit = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
